yamls/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyechoservshay-internal-service
spec:
  selector:
    app: pyechoservshay
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
